# Famine

./: .gitignore  CMakeLists.txt  Makefile  daemonProcess.c
include/: famine.h
src/: daemon.c  famine.c  utils.c
src/asm/: end.asm  famine.asm  memcpy.asm  memmem.asm  payload.asm  strcpy.asm  strlen.asm  syscall.asm
src/asm/libasm/: memcpy.asm  strcpy.asm
